--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
 
     <!-- Gray Colors -->
     <color name="gray_0">#FFFFFF</color>
+    <color name="gray_40">#B5BEC6</color>
+    <color name="gray_80">#616B74</color>
     <color name="gray_100">#EEF4F0</color>
     <color name="gray_200">#C6CCC8</color>
     <color name="gray_300">#9EA4A0</color>
